--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,14 +3,14 @@
   "name": "AmazKart",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "amazkart.jpg",
+      "sizes": "192x192",
+      "type": "image/jpeg"
     },
     {
-      "src": "logo192.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "amazkart.jpg",
+      "sizes": "512x512",
+      "type": "image/jpeg"
     }
   ],
   "start_url": ".",
